@@ -1,0 +1,101 @@
+﻿// Copyright 2004-2010 Castle Project - http://www.castleproject.org/
+// 
+// Licensed under the Apache License, Version 2.0 (the "License");
+// you may not use this file except in compliance with the License.
+// You may obtain a copy of the License at
+// 
+//     http://www.apache.org/licenses/LICENSE-2.0
+// 
+// Unless required by applicable law or agreed to in writing, software
+// distributed under the License is distributed on an "AS IS" BASIS,
+// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+// See the License for the specific language governing permissions and
+// limitations under the License.
+
+namespace Castle.Windsor.Tests.Facilities.Metadata
+{
+	using Castle.Facilities.Metadata;
+	using Castle.MicroKernel.Registration;
+
+	using NUnit.Framework;
+
+	[TestFixture]
+	public class MetadataFacilityTests
+	{
+		[SetUp]
+		public void SetUp()
+		{
+			container = new WindsorContainer();
+			container.AddFacility<MetadataFacility>();
+			MyClass.InstancesCreated = 0;
+		}
+
+		private WindsorContainer container;
+
+		[Test]
+		public void Accessing_metadata_does_not_prompt_lazy_instance_to_load()
+		{
+			container.Register(Component.For<MyClass>()
+			                   	.LazyInit()
+			                   	.WithMetadata((IHasAge a) => { a.Age = 5; }));
+			var item = container.Resolve<IMeta<MyClass, IHasAge>>();
+			Assert.AreEqual(0, MyClass.InstancesCreated);
+			var ignored = item.Data.Age;
+			Assert.AreEqual(0, MyClass.InstancesCreated);
+		}
+
+		[Test]
+		public void By_default_components_are_initialized_eagerly()
+		{
+			container.Register(Component.For<MyClass>()
+			                   	.WithMetadata((IHasAge a) => { a.Age = 5; }));
+			var item = container.Resolve<IMeta<MyClass, IHasAge>>();
+			Assert.AreEqual(1, MyClass.InstancesCreated);
+			item.Item.SayHi();
+			Assert.AreEqual(1, MyClass.InstancesCreated);
+		}
+
+		[Test]
+		public void Can_access_instance()
+		{
+			container.Register(Component.For<MyClass>()
+			                   	.WithMetadata((IHasAge a) => { a.Age = 5; }));
+			var item = container.Resolve<IMeta<MyClass, IHasAge>>();
+
+			Assert.AreEqual("hello", item.Item.SayHi());
+		}
+
+		[Test]
+		public void Can_access_metadata()
+		{
+			container.Register(Component.For<MyClass>()
+			                   	.WithMetadata((IHasAge a) => { a.Age = 5; }));
+			var item = container.Resolve<IMeta<MyClass, IHasAge>>();
+
+			Assert.AreEqual(5, item.Data.Age);
+		}
+
+		[Test]
+		public void Can_initialize_instance_lazily()
+		{
+			container.Register(Component.For<MyClass>()
+			                   	.LazyInit()
+			                   	.WithMetadata((IHasAge a) => { a.Age = 5; }));
+			var item = container.Resolve<IMeta<MyClass, IHasAge>>();
+			Assert.AreEqual(0, MyClass.InstancesCreated);
+			item.Item.SayHi();
+			Assert.AreEqual(1, MyClass.InstancesCreated);
+		}
+
+		[Test(Description = "should we throw instead?")]
+		public void Writing_metadata_gets_ignored()
+		{
+			container.Register(Component.For<MyClass>()
+			                   	.WithMetadata((IHasAge a) => { a.Age = 5; }));
+			var item = container.Resolve<IMeta<MyClass, IHasAge>>();
+
+			item.Data.Age = 8;
+			Assert.AreEqual(5, item.Data.Age);
+		}
+	}
+}
